--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <meta property="og:title" content="Online Portfolio" />
+    <meta property="og:image" content="%PUBLIC_URL%/preview.png" />
+    <meta property="og:description" content="This Page is made to showcase Anthony Veaudry's best web projects." />
+
     <title>Online Portfolio</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
