add meta description
Signed-off-by: Anthony Veaudry <anthony@veaudry.pro>

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
     <meta property="og:title" content="Online Portfolio" />
     <meta property="og:image" content="%PUBLIC_URL%/preview.png" />
     <meta property="og:description" content="This Page is made to showcase Anthony Veaudry's best web projects." />
+    <meta name="Description" content="This Page is made to showcase Anthony Veaudry's best web projects.">
 
     <title>Online Portfolio</title>
   </head>
