--- a/public/index.html
+++ b/public/index.html
@@ -42,9 +42,31 @@
     <title>Online Portfolio</title>
   </head>
   <body>
+
     <noscript>
-      You need to enable JavaScript to run this app.
+      <style type="text/css">
+
+        body{
+          background-color: #343A40;
+          color: #fff;
+          font-size: 50px;
+          text-align: center;
+          font-weight: bold;
+        }
+
+        img{
+          display: block;
+          margin: 30px auto;
+          max-width: 90vw;
+        }
+
+      </style>
+
+      <img src="./js.png">
+      <p>You need to enable JavaScript to run this application!</p>
+
     </noscript>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
