--- a/public/home/index.html
+++ b/public/home/index.html
@@ -3,11 +3,22 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="Description" content="This Page is made to showcase Anthony Veaudry's best web projects.">
+    <meta name="Description" content="This Page is made to redirect you to the home page to load the service worker">
     <meta http-equiv="refresh" content="0; URL='../'" />
     <title>Redirect Page for Users without the service worker</title>
   </head>
 <body>
+  <style type="text/css">
+    body{
+      background-color: #343A40;
+      color: #fff;
+      font-size: 50px;
+      text-align: center;
+    }
+    a{
+      color: yellow;
+    }
+  </style>
   <p>
     You have reached a page and you don't have a service worker installed! if you don't get redirected automatically click <a href="../">here</a>!
   </p>
