Add alt text to JS image on error page
Signed-off-by: Anthony Veaudry <anthony@veaudry.pro>

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
 
       </style>
 
-      <img src="./js.png">
+      <img src="./js.png" alt="JavaScript Badge">
       <p>You need to enable JavaScript to run this application!</p>
 
     </noscript>
